--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
@@ -38,6 +39,8 @@
     ]
   },
   "proxy": "http://ec2-18-221-142-60.us-east-2.compute.amazonaws.com:3000",
-  "secure": false
-
+  "secure": false,
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.8"
+  }
 }
